tests/neg/i23815.scala

package test6

package t1
trait T1

package t2 // error
trait T2
// error
